# RUST_GRPC

./: .dockerignore  .gitignore  CONNECTION_POOLING.md  Cargo.toml  Dockerfile  PERFORMANCE_ANALYSIS.md  PROFILING_COMPLETE.md  PROJECT_CLEANUP_SUMMARY.md  README.md  cleanup.bat  docker-compose.yml  docker-dev.bat  docker-dev.sh  profile.bat  quickstart.bat
benchmark/: Cargo.toml
benchmark/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
profiling/: Cargo.toml
profiling/src/: main.rs
proto/: Cargo.toml  ads.proto  build.rs  greet.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: ads_server.rs  campaign.rs  lib.rs  main.rs  server_basic.rs  server_optimized.rs
