[workspace]
members = ["server", "client", "proto", "benchmark"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
# pprof profiling dependencies (Linux only)
pprof = { version = "0.13", features = ["flamegraph", "prost-codec"] }
axum = "0.7"

[workspace.dependencies.tonic-build]
version = "0.10"

# Profile for all workspace members
[profile.release]
debug = true  # Enable debug symbols for profiling
