[package]
name = "grpc-demo-profiling"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-demo-proto = { path = "../proto" }
tokio = { workspace = true, features = ["signal"] }
tonic = { workspace = true }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Windows-compatible profiling
sysinfo = "0.32"
